# defi-sentinel

./: .env.example  README.md  context.md  render.yaml
agent/: .env.example  Dockerfile  MCP_SETUP.md  package-lock.json  package.json  railway.toml
agent/prisma/: dev.db  schema.prisma
agent/scripts/: checkDeploy.ts  deployContract.ts
agent/src/: casper.ts  claude.ts  contract.ts  index.ts  mcp.ts  risk.test.ts  risk.ts  server.ts  transaction.ts  utils.ts  x402.ts
contracts/: Cargo.toml  Odra.toml  deploy.sh
contracts/.cargo/: config.toml
contracts/keys/: secret_key.pem
contracts/src/: lib.rs  sentinel.rs
contracts/wasm/: SentinelContract.wasm
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: ActionLog.tsx  AgentReasoningFeed.tsx  PositionList.tsx  RiskChart.tsx  RiskGauge.tsx
