[package]
name = "defi-sentinel-contracts"
version = "0.1.0"
edition = "2021"
authors = ["DeFi Sentinel Team"]
description = "Native Casper smart contracts for DeFi Sentinel — on-chain risk monitoring agent"

[dependencies]
casper-contract = { version = "1.4.4", default-features = false }
casper-types = "1.5.0"
wee_alloc = "0.4.5"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
